# itsml

./: README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yaml  test_workflow.yaml
itsml/feature_extraction/: text.py
itsml/preprocessing/: text.py
orbiaml/feature_extraction/: text.py
orbiaml/preprocessing/: text.py
scripts/: code_quality.py
tests/: test_text_cleaners.py  test_text_vectorizers.py
